# floodgate

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
include/: floodgate.h
src/: clap.yml  default.rs  floodcontrol.rs  floodgate.cpp  image.rs  image_generator.rs  main.cpp  main.rs  naive.rs  picture.rs  stage.rs
